--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
-# db tugas
+# db proyek
 DB_HOST_PROYEK=localhost
 DB_PORT_PROYEK=3306
 DB_DATABASE_PROYEK=db_proyek_fpw
